--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   deploy:
     name: Deploying  Clima
     runs-on: ubuntu-latest
-    if: "github.event.head_commit.message, 'to deploy'"
+    if: "contains(github.event.head_commit.message, 'to deploy')"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
