--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-daq==0.5.0
 dash-html-components==2.0.0
+dash-pivottable
 dash-table==5.0.0
 decorator==5.1.1
 et-xmlfile==1.1.0
